Fixed Add shadow clipping Workspace

--- a/src/components/Workspace.module.css
+++ b/src/components/Workspace.module.css
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-left: 10vw;
+  margin-left: 8vw;
+  padding-left: 2vw;
   user-select: none;
   overflow: hidden;
 }
